# FunDemos

./: README.md
OpenGL/: README.md  ctags.sh
OpenGL/check_version/: CMakeLists.txt
OpenGL/demos/MagicCube/: CMakeLists.txt  cube_basic.cpp  cube_basic.hpp  magic_cube.cpp  magic_cube.hpp  main.cpp
OpenGL/demos/WanHuaTong/: CMakeLists.txt  main.cpp
OpenGL/demos/WanHuaTong/shaders/: draw.fs.glsl
OpenGL/examples/: CMakeLists.txt  example.c  example1.c  example10.c  example11.c  example12.c  example13.c  example14.c  example2.c  example3.c  example4.c  example5.c  example6.c  example7.c  example8.c  example9.c  red_book_example_01-keypress.cpp  red_book_example_03-drawcommands.cpp  red_book_example_03-instancing.cpp  red_book_example_03-pointsprites.cpp  red_book_example_03-primitiverestart.cpp  red_book_example_03-xfb.cpp  red_book_example_04-gouraud.cpp  red_book_example_04-shadowmap.cpp  red_book_example_06-cubemap.cpp  red_book_example_06-load-texture.cpp  red_book_example_06-multitexture.cpp  red_book_example_09-teapot.cpp  red_book_example_1-1.cpp
OpenGL/examples/include/: vapp.h  vgl.h
OpenGL/examples/shaders/gouraud/: gouraud.frag  gouraud.vert
OpenGL/examples/shaders/keypress/: keypress.vert
OpenGL/examples/shaders/pointsprites/: pointsprites.fs.glsl
OpenGL/examples/shaders/primitive_restart/: primitive_restart.vs.glsl
OpenGL/examples/shaders/shadowmap/: shadowmap_scene.fs.glsl
OpenGL/examples/shaders/teapot/: teapot.cont  teapot.eval  teapot.frag  teapot.vert
OpenGL/examples/shaders/triangles/: triangles.frag
OpenGL/examples/src/: LoadShaders.cpp  vbm.cpp  vdds.cpp  vermilion.cpp
OpenGL/glfw-3.3.2/: CMakeLists.txt
OpenGL/include/: LoadShaders.h  glad.h  targa.h
OpenGL/shaders/keypress/: keypress.frag
OpenGL/shaders/pointsprites/: pointsprites.vs.glsl
OpenGL/shaders/shadowmap/: shadowmap_scene.vs.glsl
OpenGL/src/: LoadShaders.cpp  glad.c  targa.cpp  vbm.cpp  vermilion.cpp
SomeUsefullTools/: WatchOut.txt  backup_system.sh  build_zx1800_linux.txt  ctags.sh  new_system_patch.sh  print.cpp  python_change_version.txt  recovery_system.sh
d2lzh/: README.md
d2lzh/chapter_computational-performance/: async-computation.ipynb  auto-parallelism.ipynb  hybridize.ipynb  multiple-gpus-gluon.ipynb  multiple-gpus.ipynb
d2lzh/chapter_computer-vision/: anchor.ipynb  bounding-box.ipynb  fcn.ipynb  fine-tuning.ipynb  image-augmentation.ipynb  kaggle-gluon-cifar10.ipynb  kaggle-gluon-dog.ipynb  multiscale-object-detection.ipynb  neural-style.ipynb  object-detection-dataset.ipynb  semantic-segmentation-and-dataset.ipynb  ssd.ipynb
d2lzh/chapter_convolutional-neural-networks/: alexnet.ipynb  batch-norm.ipynb  densenet.ipynb  googlenet.ipynb  lenet.ipynb  nin.ipynb  resnet.ipynb  vgg.ipynb
d2lzh/chapter_deep-learning-basics/: dropout.ipynb  fashion-mnist.ipynb  kaggle-house-price.ipynb  linear-regression-gluon.ipynb  linear-regression-scratch.ipynb  linear-regression.ipynb  mlp-gluon.ipynb  mlp-scratch.ipynb  mlp.ipynb  softmax-regression-gluon.ipynb  softmax-regression-scratch.ipynb  underfit-overfit.ipynb  weight-decay.ipynb
d2lzh/chapter_deep-learning-computation/: use-gpu.ipynb
d2lzh/chapter_natural-language-processing/: machine-translation.ipynb  sentiment-analysis-cnn.ipynb  sentiment-analysis-rnn.ipynb  word2vec-gluon.ipynb
d2lzh/chapter_optimization/: adadelta.ipynb  adagrad.ipynb  adam.ipynb  gd-sgd.ipynb  minibatch-sgd.ipynb  momentum.ipynb  optimization-intro.ipynb  rmsprop.ipynb
d2lzh/chapter_recurrent-neural-networks/: gru.ipynb  lang-model-dataset.ipynb  lstm.ipynb  rnn-gluon.ipynb  rnn-scratch.ipynb
