PROJECT (TEST)
CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

set(TARGET_NAME example)

file(GLOB SRC_LIST opengl_version.c)

set(HELLO_BINARY_DIR "FabioKong test.")

MESSAGE(STATUS "This is HELLO_BINARY_DIR " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is HELLO_SOURCE_DIR " ${HELLO_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "This is CMAKE_SOURCE_DIR " ${CMAKE_SOURCE_DIR})

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++11 )

ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})

target_link_libraries(${TARGET_NAME}
    -lGL -lGLU -lglut -lm
)


